[#111095476] fix title and arrow overlap

--- a/src/modules/scheduling/css/calendar.scss
+++ b/src/modules/scheduling/css/calendar.scss
@@ -108,10 +108,10 @@
                     height: auto;
                 }
                 .fc-prev-button{
-                    left: 25px;
+                    left: 15px;
                 }
                 .fc-next-button{
-                    right: 25px;
+                    right: 15px;
                 }
             }
 
